# inkplate-dev-console

./: .gitignore  LICENSE  README.md  library.properties  pyproject.toml
examples/BasicDevConsole/: BasicDevConsole.ino
python/inkplate_dev_console/: __init__.py  cli.py  client.py
skills/inkplate-dev-console/: SKILL.md
skills/inkplate-dev-console/agents/: openai.yaml
src/: InkplateDevConsole.cpp  InkplateDevConsole.h
tests/: test_frames.py  test_protocol.py
